@@ -1,0 +1,3 @@
+@rem $Id: make.bat,v 2.1 1996/08/30 18:04:19 layer Exp $
+@echo off
+c:\emacs-19.34\bin\emacs -batch -l fi-compile.el -kill
