@@ -1,3 +1,9 @@
+Fri Aug 30 11:01:15 1996    <layer@HOBART>
+
+	* fi-subproc.el: finishing touches on getting it to work on
+	Windows.
+	* make.bat for building .elc files.
+
 Thu Aug 29 10:03:23 1996    <layer@HOBART>
 
 	* fi-site-init.el: version -> 2.0.20 alpha 1
